add a lifecycle event using setTimeout and stop button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <script src="main.js" type="module"></script>
 </head>
 <body>
-    <div class="board"></div>
-    <button class="start-btn">Start</button>
+    <div class="container">
+        <div class="board"></div>
+        <div class="btn-container">
+            <button class="start-btn">Start</button>
+            <button class="stop-btn">Stop</button>
+        </div>
+    </div>
 </body>
 </html>
